--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -12,8 +12,8 @@
     <div class="col-lg-12 grid-margin">
         <div class="card overflow-hidden dashboard-curved-chart">
             <div class="card-body mx-3">
-                <h2 class="card-title border-bottom-none">欢迎，管理员名字</h2>
-                <p>2018年12月24日13:29:49</p>
+                <h2 class="card-title border-bottom-none">欢迎，{$Think.session.bigdata_admin_name}</h2>
+                <p>上次登录 {$last_login_time|date='Y-m-d H:i:s',###}</p>
             </div>
             <div id="curved-line-chart" class="float-chart float-chart-mini"></div>
         </div>
