--- a/application/admin/view/layouts/layout.html
+++ b/application/admin/view/layouts/layout.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>BigData Admin</title>
     <link rel="stylesheet" href="__STATIC__/admin/css/style.css">
+    <link rel="stylesheet" href="__STATIC__/js/layui/css/layui.css">
     <link rel="stylesheet" href="__STATIC__/iconfont/iconfont.css">
     <link rel="shortcut icon" href="__STATIC__/admin/images/favicon.png" />
 </head>
@@ -15,98 +16,10 @@
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
         <div class="text-center navbar-brand-wrapper">
             <a class="navbar-brand brand-logo" href="index.html"><img style="height: 43px;width: 43px" src="__STATIC__/admin/images/logo.svg" alt="logo"></a>
-            <a class="navbar-brand brand-logo-mini" href="index.html"><img src="__STATIC__/admin/images/logo_mini.svg" alt="logo"></a>
         </div>
         <div class="navbar-menu-wrapper d-flex align-items-center">
-            <p class="page-name d-none d-lg-block">Hi, Dave Mattew</p>
+            <p class="page-name d-none d-lg-block">Hi, BIGDATA</p>
             <ul class="navbar-nav ml-lg-auto">
-
-                <li class="nav-item dropdown mail-dropdown">
-                    <a class="nav-link count-indicator" id="MailDropdown" href="#" data-toggle="dropdown">
-                        <i class="icon-envelope-letter icons"></i>
-                        <span class="count bg-danger"></span>
-                    </a>
-                    <div class="dropdown-menu navbar-dropdown mail-notification dropdownAnimation" aria-labelledby="MailDropdown">
-                        <a class="dropdown-item" href="#">
-                            <div class="sender-img">
-                                <img src="__STATIC__/admin/images/faces/face6.jpg" alt="">
-                                <span class="badge badge-success">&nbsp;</span>
-                            </div>
-                            <div class="sender">
-                                <p class="Sende-name">John Doe</p>
-                                <p class="Sender-message">Hey, We have a meeting planned at the end of the day.</p>
-                            </div>
-                        </a>
-                        <a class="dropdown-item" href="#">
-                            <div class="sender-img">
-                                <img src="__STATIC__/admin/images/faces/face2.jpg" alt="">
-                                <span class="badge badge-success">&nbsp;</span>
-                            </div>
-                            <div class="sender">
-                                <p class="Sende-name">Leanne Jones</p>
-                                <p class="Sender-message">Can we schedule a call this afternoon?</p>
-                            </div>
-                        </a>
-                        <a class="dropdown-item" href="#">
-                            <div class="sender-img">
-                                <img src="__STATIC__/admin/images/faces/face4.jpg" alt="">
-                                <span class="badge badge-warning">&nbsp;</span>
-                            </div>
-                            <div class="sender">
-                                <p class="Sende-name">James Brown</p>
-                                <p class="Sender-message">Need the updates of the project at the end of the week.</p>
-                            </div>
-                        </a>
-                        <a href="#" class="dropdown-item view-all">View all</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown notification-dropdown">
-                    <a class="nav-link count-indicator" id="notificationDropdown" href="#" data-toggle="dropdown">
-                        <i class="icon-speech icons"></i>
-                        <span class="count"></span>
-                    </a>
-                    <div class="dropdown-menu navbar-dropdown preview-list notification-drop-down dropdownAnimation" aria-labelledby="notificationDropdown">
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <div class="preview-icon">
-                                    <i class="icon-info mx-0"></i>
-                                </div>
-                            </div>
-                            <div class="preview-item-content">
-                                <p class="preview-subject font-weight-medium">Application Error</p>
-                                <p class="font-weight-light small-text">
-                                    Just now
-                                </p>
-                            </div>
-                        </a>
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <div class="preview-icon">
-                                    <i class="icon-speech mx-0"></i>
-                                </div>
-                            </div>
-                            <div class="preview-item-content">
-                                <p class="preview-subject">Settings</p>
-                                <p class="font-weight-light small-text">
-                                    Private message
-                                </p>
-                            </div>
-                        </a>
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <div class="preview-icon">
-                                    <i class="icon-envelope mx-0"></i>
-                                </div>
-                            </div>
-                            <div class="preview-item-content">
-                                <p class="preview-subject">New user registration</p>
-                                <p class="font-weight-light small-text">
-                                    2 days ago
-                                </p>
-                            </div>
-                        </a>
-                    </div>
-                </li>
                 <li class="nav-item d-none d-sm-block profile-img">
                     <a class="nav-link profile-image" href="#">
                         <img src="__STATIC__/admin/images/faces/face4.jpg" alt="profile-img">
@@ -126,12 +39,12 @@
             <nav class="sidebar sidebar-offcanvas" id="sidebar">
                 <ul class="nav">
                     <li class="nav-item nav-item-checked">
-                        <a class="nav-link" href="index.html">
+                        <a href="{:url('admin/index')}" class="nav-link <?php if(request()->path()=='admin/index') echo 'nav-link-check'; ?>">
                             <span class="menu-title"><i class="iconfont icon-admin-home "></i>主页</span>
                         </a>
                     </li>
                     <li class="nav-item nav-item-checked">
-                        <a class="nav-link" href="index.html">
+                        <a href="{:url('admin/lesson')}" class="nav-link <?php if(request()->path()=='admin/lesson') echo 'nav-link-check'; ?>">
                             <span class="menu-title"><i class="iconfont icon-admin-lesson "></i>课程管理</span>
                         </a>
                     </li>
