管理员后台添加课程

--- a/application/admin/view/layouts/layout.html
+++ b/application/admin/view/layouts/layout.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="__STATIC__/js/layui/css/layui.css">
     <link rel="stylesheet" href="__STATIC__/iconfont/iconfont.css">
     <link rel="shortcut icon" href="__STATIC__/admin/images/favicon.png" />
+    <script type="text/javascript" src="__STATIC__/js/layui/layui.js"></script>
+    <script type="text/javascript" src="__STATIC__/js/jquery-3.3.1.min.js"></script>
 </head>
 <body>
 <div class="container-scroller">
