管理员后台添加课程/删除课程，添加工具类以及layui的弹窗/文件上传/富文本编辑器

--- a/application/admin/view/layouts/layout.html
+++ b/application/admin/view/layouts/layout.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="__STATIC__/admin/css/style.css">
     <link rel="stylesheet" href="__STATIC__/js/layui/css/layui.css">
     <link rel="stylesheet" href="__STATIC__/iconfont/iconfont.css">
+    <!--<link rel="stylesheet" href="__STATIC__/js/layer/mobile/need/layer.css">-->
     <link rel="shortcut icon" href="__STATIC__/admin/images/favicon.png" />
     <script type="text/javascript" src="__STATIC__/js/layui/layui.js"></script>
+    <!--<script type="text/javascript" src="__STATIC__/js/layer/layer.js"></script>-->
     <script type="text/javascript" src="__STATIC__/js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="__STATIC__/js/commom.js"></script>
 </head>
 <body>
 <div class="container-scroller">
