--- a/application/admin/view/lesson/add.html
+++ b/application/admin/view/lesson/add.html
@@ -10,12 +10,11 @@
     <link rel="stylesheet" href="__STATIC__/iconfont/iconfont.css">
     <link rel="shortcut icon" href="__STATIC__/admin/images/favicon.png" />
     <script type="text/javascript" src="__STATIC__/js/layui/layui.js"></script>
+    <script type="text/javascript" src="__STATIC__/js/commom.js"></script>
 </head>
 <style>
     body{
         background: #FFFFFF;
-        min-height: 600px;
-        height: 600px;
     }
     #myform .layui-form-label{
         width: 14%;
@@ -33,29 +32,42 @@
 </fieldset>
 
 <form class="layui-form" action="" id="myform"  enctype="multipart/form-data" method="POST">
-    <input type="number" name="teacherId" hidden value="{$Think.session.teacherid}">
+    <!--<input type="number" name="teacherId" hidden value="{$Think.session.teacherid}">-->
     <div class="layui-form-item">
         <label class="layui-form-label">课程名</label>
         <div class="layui-input-block">
-            <input type="text" name="lessonname" required lay-verify="required" autocomplete="off" placeholder="请输入标题" class="layui-input">
+            <input type="text" name="name" lay-verify="required" autocomplete="off" placeholder="请输入标题" class="layui-input require">
+        </div>
+    </div>
+
+    <div class="layui-form-item">
+        <label class="layui-form-label">课程类别</label>
+        <div class="layui-input-block">
+            <select name="tid" lay-filter="type">
+                <option value=""></option>
+                {volist name='lesson_type' id='value'}
+                <option value="{$value.id}">{$value.name}</option>
+                {/volist}
+            </select>
         </div>
     </div>
 
     <div class="layui-form-item layui-form-text">
         <label class="layui-form-label">课程简介</label>
         <div class="layui-input-block">
-            <textarea name="intro" placeholder="请输入内容" class="layui-textarea"></textarea>
+            <textarea name="intro" id="intro" placeholder="请输入内容" class="layui-textarea require"></textarea>
         </div>
     </div>
-    <div class="layui-form-item layui-form-text">
-        <label class="layui-form-label">课程封面</label>
-        <div class="layui-input-block">
-            <div class="layui-upload-drag" id="test10">
-                <i class="layui-icon"></i>
-                <p>点击上传，或将文件拖拽到此处</p>
-            </div>
-        </div>
-    </div>
+
+    <!--<div class="layui-form-item layui-form-text">-->
+        <!--<label class="layui-form-label">课程封面</label>-->
+        <!--<div class="layui-input-block">-->
+            <!--<div class="layui-upload-drag" id="test10">-->
+                <!--<i class="layui-icon"></i>-->
+                <!--<p>点击上传，或将文件拖拽到此处</p>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 
     <div class="layui-form-item layui-form-text">
         <label class="layui-form-label">课程封面</label>
@@ -64,86 +76,37 @@
                 <button type="button" class="layui-btn" id="test1">上传图片</button>
                 <div class="layui-upload-list">
                     <img class="layui-upload-img" id="demo1">
+                    <input type="hidden" name="poster" id="poster" value="">
                     <p id="demoText"></p>
                 </div>
             </div>
         </div>
     </div>
-
-
-    <div class="layui-form-item">
-        <div class="layui-input-block">
-            <!--<input class="layui-btn" type="submit"  value="提交">-->
-            <!--<button class="layui-btn" lay-submit="" lay-filter="demo1">立即提交</button>-->
-            <a href="javascript:;"><button class="layui-btn" onclick="submitform()">立即提交</button></a>
-            <button type="reset" class="layui-btn layui-btn-primary">重置</button>
-        </div>
-    </div>
 </form>
 
 <script>
-    layui.use('upload', function() {
-        var $ = layui.jquery
-            , upload = layui.upload;
+    //上传文件
+    file_upload_manager.normalUpload('{:url("admin/upload")}',{},'#test1','#demo1','#poster');
 
-        //普通图片上传
-        var uploadInst = upload.render({
-            elem: '#test1'
-            ,url: '/upload/'
-            ,before: function(obj){
-                //预读本地文件示例，不支持ie8
-                obj.preview(function(index, file, result){
-                    $('#demo1').attr('src', result); //图片链接（base64）
-                });
-            }
-            ,done: function(res){
-                //如果上传失败
-                if(res.code > 0){
-                    return layer.msg('上传失败');
-                }
-                //上传成功
-            }
-            ,error: function(){
-                //演示失败状态，并实现重传
-                var demoText = $('#demoText');
-                demoText.html('<span style="color: #FF5722;">上传失败</span> <a class="layui-btn layui-btn-xs demo-reload">重试</a>');
-                demoText.find('.demo-reload').on('click', function(){
-                    uploadInst.upload();
-                });
+    // var layedit_index = layeditManager.builder('intro','{:url("admin/layeditUpload")}');
+
+    var  index,layedit;
+    layui.use('layedit', function(){
+        layedit = layui.layedit;
+        layedit.set({
+            uploadImage: {
+                url: '{:url("admin/layeditUpload")}' //接口url
             }
         });
-
-        upload.render({
-            elem: '#test10'
-            , url: '/upload/'
-            , done: function (res) {
-                console.log(res)
-            }
-        });
+        index = layedit.build('intro',{height:200}); //建立编辑器
     });
-    function submitform() {
-        var formdata = new FormData($("#myform")[0]);
-        $.ajax({
-            url:"{:url('index/doaddlesson')}",
-            method:'post',
-            data:formdata,
-            dataType:'JSON',
-            processData: false,
-            contentType: false,
-            success:function(data){
-                if(data.status='0'){
-                    parent.layer.closeAll();
-                    parent.layer.msg(data.msg,{icon:6});
-                    parent.location.href=parent.location.href;//刷新页面
-                }
-                else
-                    parent.layer.msg(data.msg,{icon:5});
-            },
-            error:function (data) {
-                parent.layer.msg(data.msg,{icon:5});
-            }
-        })
-    };
+
+    function syncTexrarea() {
+        layedit.sync(index);
+        // console.log(layedit_index['index']);
+        // console.log(layedit_index['layedit']);
+        // layedit_index[layedit].sync(layedit_index[index]);
+    }
     layui.use(['form', 'layer','layedit', 'laydate','upload'], function(){
         var form = layui.form;
     });
