--- a/application/admin/view/lesson/add.html
+++ b/application/admin/view/lesson/add.html
@@ -11,6 +11,9 @@
     <link rel="shortcut icon" href="__STATIC__/admin/images/favicon.png" />
     <script type="text/javascript" src="__STATIC__/js/layui/layui.js"></script>
     <script type="text/javascript" src="__STATIC__/js/commom.js"></script>
+    <script type="text/javascript" src="__STATIC__/js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="__STATIC__/js/layui-xtree.js"></script>
+
 </head>
 <style>
     body{
@@ -28,7 +31,7 @@
 </style>
 <body>
 <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-    <legend>添加新课程</legend>
+    <legend>{$info['id']?'编辑':'添加'}课程</legend>
 </fieldset>
 
 <form class="layui-form" action="" id="myform"  enctype="multipart/form-data" method="POST">
@@ -36,7 +39,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label">课程名</label>
         <div class="layui-input-block">
-            <input type="text" name="name" lay-verify="required" autocomplete="off" placeholder="请输入标题" class="layui-input require">
+            <input type="text" name="name" value="{$info['name']?$info['name']:''}" lay-verify="required" autocomplete="off" placeholder="请输入课程名" class="layui-input require">
         </div>
     </div>
 
@@ -46,37 +49,35 @@
             <select name="tid" lay-filter="type">
                 <option value=""></option>
                 {volist name='lesson_type' id='value'}
-                <option value="{$value.id}">{$value.name}</option>
+                <option value="{$value.id}" {$info['type_id']?($info['type_id']==$value['id']?'selected':''):''}>{$value.name}</option>
                 {/volist}
             </select>
+        </div>
+    </div>
+
+    <div class="layui-form-item">
+        <label class="layui-form-label">关联教师</label>
+        <div class="layui-input-block">
+            <div id="xtree1" style="border:1px solid #e6e6e6;padding: 10px 0 25px 5px;"></div>
+            <input type="hidden" value="{$info['teacher_ids']?$info['teacher_ids']:''}" id="teacher_ids" name="teacher_ids">
         </div>
     </div>
 
     <div class="layui-form-item layui-form-text">
         <label class="layui-form-label">课程简介</label>
         <div class="layui-input-block">
-            <textarea name="intro" id="intro" placeholder="请输入内容" class="layui-textarea require"></textarea>
+            <textarea name="intro" id="intro" placeholder="请输入内容" class="layui-textarea require">{$info['intro']?$info['intro']:''}</textarea>
         </div>
     </div>
-
-    <!--<div class="layui-form-item layui-form-text">-->
-        <!--<label class="layui-form-label">课程封面</label>-->
-        <!--<div class="layui-input-block">-->
-            <!--<div class="layui-upload-drag" id="test10">-->
-                <!--<i class="layui-icon"></i>-->
-                <!--<p>点击上传，或将文件拖拽到此处</p>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
 
     <div class="layui-form-item layui-form-text">
         <label class="layui-form-label">课程封面</label>
         <div class="layui-input-block">
             <div class="layui-upload">
-                <button type="button" class="layui-btn" id="test1">上传图片</button>
+                <button type="button" class="layui-btn" id="test1">上传封面</button>
                 <div class="layui-upload-list">
-                    <img class="layui-upload-img" id="demo1">
-                    <input type="hidden" name="poster" id="poster" value="">
+                    <img class="layui-upload-img" id="demo1" src="{$info['poster']?'__STATIC__'.$info['poster']:''}">
+                    <input type="hidden" name="poster" id="poster" value="{$info['poster']?$info['poster']:''}">
                     <p id="demoText"></p>
                 </div>
             </div>
@@ -85,6 +86,30 @@
 </form>
 
 <script>
+    deptTreeBuilder('xtree1',{$dept},function (ids) {
+        $('#teacher_ids').val(ids);
+    });
+    // layui.use(['form'], function () {
+    //     var form = layui.form;
+    //
+    //     var xtree3 = new layuiXtree({
+    //         elem: 'xtree1'   //(必填) 放置xtree的容器id，不要带#号
+    //         , form: form     //(必填) layui 的 from
+    //         , data: {$dept}
+    //         , isopen: false  //加载完毕后的展开状态，默认值：true
+    //         , ckall: true    //启用全选功能，默认值：false
+    //         , ckallback: function () {
+    //             xtree3.GetChecked();
+    //         } //全选框状态改变后执行的回调函数
+    //         , click: function (data) {  //节点选中状态改变事件监听，全选框有自己的监听事件
+    //             console.log(data.elem); //得到checkbox原始DOM对象
+    //             console.log(data.elem.checked); //开关是否开启，true或者false
+    //             console.log(data.value); //开关value值，也可以通过data.elem.value得到
+    //             console.log(data.othis); //得到美化后的DOM对象
+    //         }
+    //     });
+    // });
+
     //上传文件
     file_upload_manager.normalUpload('{:url("admin/upload")}',{},'#test1','#demo1','#poster');
 
