--- a/application/admin/view/lesson/index.html
+++ b/application/admin/view/lesson/index.html
@@ -8,6 +8,11 @@
     #adminlesson #edit,#del{
         color: #ffffff;
     }
+    #adminlesson .table td img{
+        width: 55px;
+        height: 30px;
+         border-radius: 5%;
+    }
 </style>
 
 {layout name="layouts/layout" /}
@@ -20,8 +25,8 @@
                     <div class="nav-wrapper d-inline-block mt-4 mt-lg-0">
                         <ul class="nav nav-pills">
                             <li class="nav-item">
-                                <a class="nav-link btn btn-light mr-1" id="addLesson" href="#" data-title="添加课程"
-                                   onclick="addlesson()"><i style="font: inherit" class="layui-icon layui-icon-add-1"></i>添加</a>
+                                <a class="nav-link btn btn-light mr-1 lesson_add" id="addLesson" href="#" data-title="添加课程" data-id=""
+                                data-href="{:url('admin/lessonAdd')}"><i style="font: inherit" class="layui-icon layui-icon-add-1"></i>添加</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link btn btn-light mr-1" href="#"><i style="font: inherit" class="layui-icon layui-icon-up"></i>导入</a>
@@ -46,15 +51,13 @@
                         <tr>
                             <td>{$i}</td>
                             <td>{$vo.name}</td>
-                            <td><img src="__STATIC__/uploads/poster/{$vo.poster}" width="100px" alt=""></td>
-                            <td><img src="__STATIC__/{$vo.poster|DSFormat}" width="100px" alt=""></td>
-                            <td>教师</td>
+                            <td class="showPhotos"><img src="__STATIC__{$vo.poster}" width="100px" alt=""></td>
+                            <td>{$vo.teachers_name}</td>
                             <td>{$vo.create_time|date='Y-m-d H:i:s',###}</td>
                             <td>
-                                <!--<button class="layui-btn layui-btn-sm"><i class="layui-icon"></i></button>-->
-                                    <a class="layui-btn layui-btn-primary layui-btn-xs" id="detail" lay-event="detail">查看</a>
-                                    <a class="layui-btn layui-btn-xs" lay-event="edit" id="edit">编辑</a>
-                                    <a class="layui-btn layui-btn-danger layui-btn-xs" id="del" lay-event="del" onclick="del({$vo.id})">删除</a>
+                                <!--<a class="layui-btn layui-btn-primary layui-btn-xs lesson_detail" lay-event="detail" data-href="{:url('admin/lessonDetail',['id'=>$vo.id])}">查看</a>-->
+                                <a class="layui-btn layui-btn-xs lesson_edit" lay-event="edit" data-id="{$vo.id}" data-href="{:url('admin/lessonAdd',['id'=>$vo.id])}">编辑</a>
+                                <a class="layui-btn layui-btn-danger layui-btn-xs lesson_del" lay-event="del" data-id="{$vo.id}" data-href="{:url('admin/lessonDel',['id'=>$vo.id])}">删除</a>
                             </td>
                         </tr>
                         {/volist}
@@ -62,7 +65,7 @@
                     </table>
                 </div>
                 <div class="d-flex align-items-center justify-content-between flex-wrap">
-                    <p class="mb-0">Showing {$list->listRows()*($list->currentPage()-1)} to {$list->total()-($list->listRows()*($list->currentPage()-1))} of {$list->total()} entries</p>
+                    <p class="mb-0"> 共 {$list->total()} 条</p>
                     <nav>
                         {$list->render()}
                     </nav>
@@ -73,6 +76,7 @@
 </div>
 
 <script>
+    showphotos.init('.showPhotos');
     function addlesson() {
         rePositionLayuiIframe('添加新课程');
         layui.use(['layer'], function () {
@@ -116,17 +120,49 @@
             });
         });
     }
-    
-    // function del(id) {
-    //
-    // }
 
-    function del(id) {
+    $('.lesson_edit').on('click',function () {
+        alt('编辑课程',$(this));
+    });
+
+    $('.lesson_add').on('click',function () {
+        alt('添加课程',$(this));
+    });
+
+    function alt(title,dom){
+        var this_e = dom;
+        var url = this_e.data('href');
+        var id = this_e.data('id');
+        var save_url = '{:url("admin/lessonSaveAdd")}';
+        layui_iframe.editBuilder(title,url,function (index,layero) {
+            //获取弹出层的表单
+            var form = layer.getChildFrame('#myform', index);
+            //调用弹出层的富文本同步方法
+            var iframeWin = window[layero.find('iframe')[0]['name']];
+            iframeWin.syncTexrarea();
+            if(id){
+                save_url = '{:url("admin/lessonSaveAdd")}'+'?id='+id;
+            }
+            ajax_request.post(save_url,form.serialize(),function (res) {
+                if(res.is_ok == 'ok'){
+                    layer.msg(res.msg,{icon:6});
+                    layer.close(index);
+                    location.reload();//刷新页面
+                }else{
+                    layer.msg(res.msg,{icon:5});
+                }
+            })
+        })
+    }
+
+    $('.lesson_del').on('click',function () {
+        var url = $(this).data('href');
+
         layui.use("layer", function () {
             var layer = layui.layer;  //layer初始化
             layer.confirm('确认删除',{btn:['确认','取消']},
                 function () {
-                    $.post("{:url('admin/lessondel')}",{"id":id},function (data) {
+                    $.post(url,{},function (data) {
                         if(data.is_ok=='ok'){
                             location.reload();//刷新页面
                             layer.msg(data.msg,{icon:6});
@@ -136,7 +172,7 @@
                     });
                 });
         });
-    }
+    });
 
     //在iframe中关闭自身
     //var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
