--- a/application/admin/view/login/login.html
+++ b/application/admin/view/login/login.html
@@ -34,7 +34,7 @@
                   <form id="admin-login-form">
                     <div class="form-group">
                       <label for="InputEmail">用户名</label>
-                      <input type="name" class="form-control require" id="InputEmail" data-name="用户名" placeholder="请输入用户名">
+                      <input type="name" class="form-control require" id="InputEmail" data-name="用户名" autocomplete="off" placeholder="请输入用户名">
                       <i class="mdi mdi-account"></i>
                     </div>
                     <div class="form-group">
