--- a/application/admin/view/type/index.html
+++ b/application/admin/view/type/index.html
@@ -1,6 +1,6 @@
 <style>
     #admintype{
-        min-height: 90%;
+        /*min-height: 90%;*/
     }
     #admintype .card{
         min-height: 100%;
@@ -13,9 +13,31 @@
         height: 30px;
          border-radius: 5%;
     }
+    .layui-btn-xs{
+        font-size: 11px;
+    }
 </style>
 
 {layout name="layouts/layout" /}
+<div class="row">
+    <div class="col-md-12 grid-margin">
+        <div class="card">
+            <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                    <form class="forms-sample filters">
+                        <div class="">
+                            <div class="input-group col-xs-12">
+                                <input type="text" class="form-control form-control-sm" placeholder="输入类别名" name="search_key">
+                                <span class="input-group-append"><button class="btn btn-info search-btn" type="button">搜索</button></span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="row"  id="admintype">
     <div class="col-lg-12 grid-margin">
         <div class="card">
@@ -54,12 +76,12 @@
                         {/volist}
                         </tbody>
                     </table>
-                </div>
-                <div class="d-flex align-items-center justify-content-between flex-wrap">
-                    <p class="mb-0"> 共 {$list->total()} 条</p>
-                    <nav>
-                        {$list->render()}
-                    </nav>
+                    <div class="d-flex align-items-center justify-content-between flex-wrap">
+                        <p class="mb-0"> 共 {$list->total()} 条</p>
+                        <nav>
+                            {$list->render()}
+                        </nav>
+                    </div>
                 </div>
             </div>
         </div>
@@ -67,53 +89,61 @@
 </div>
 
 <script>
-    $('.type_edit').on('click',function () {
-        alt('编辑类别',$(this));
-    });
+    $(function () {
+        $('.search-btn').on('click',function () {
+            var params = $('.filters').serialize();
+            refreshDom('{:url("admin/type")}',params,'#admintype .table-responsive');
+        });
 
-    $('.type_add').on('click',function () {
-        alt('添加类别',$(this));
-    });
+        $('.type_edit').on('click',function () {
+            alt('编辑类别',$(this));
+        });
 
-    function alt(title,dom){
-        var this_e = dom;
-        var url = this_e.data('href');
-        var id = this_e.data('id');
-        var save_url = '{:url("admin/typeSaveAdd")}';
-        layui_iframe.editBuilder(title,url,function (index,layero) {
-            //获取弹出层的表单
-            var form = layer.getChildFrame('#myform', index);
-            if(id){
-                save_url = '{:url("admin/typeSaveAdd")}'+'?id='+id;
-            }
-            ajax_request.post(save_url,form.serialize(),function (res) {
-                if(res.is_ok == 'ok'){
-                    layer.msg(res.msg,{icon:6});
-                    layer.close(index);
-                    location.reload();//刷新页面
-                }else{
-                    layer.msg(res.msg,{icon:5});
+        $('.type_add').on('click',function () {
+            alt('添加类别',$(this));
+        });
+
+        function alt(title,dom){
+            var this_e = dom;
+            var url = this_e.data('href');
+            var id = this_e.data('id');
+            var save_url = '{:url("admin/typeSaveAdd")}';
+            layui_iframe.editBuilder(title,url,function (index,layero) {
+                //获取弹出层的表单
+                var form = layer.getChildFrame('#myform', index);
+                if(id){
+                    save_url = '{:url("admin/typeSaveAdd")}'+'?id='+id;
                 }
-            })
-        },['800px','250px'])
-    }
+                ajax_request.post(save_url,form.serialize(),function (res) {
+                    if(res.is_ok == 'ok'){
+                        layer.msg(res.msg,{icon:6});
+                        layer.close(index);
+                        location.reload();//刷新页面
+                    }else{
+                        layer.msg(res.msg,{icon:5});
+                    }
+                })
+            },['800px','250px'])
+        }
 
-    $('.type_del').on('click',function () {
-        var url = $(this).data('href');
+        $('.type_del').on('click',function () {
+            var url = $(this).data('href');
 
-        layui.use("layer", function () {
-            var layer = layui.layer;  //layer初始化
-            layer.confirm('确认删除',{btn:['确认','取消']},
-                function () {
-                    $.post(url,{},function (data) {
-                        if(data.is_ok=='ok'){
-                            location.reload();//刷新页面
-                            layer.msg(data.msg,{icon:6});
-                        }else{
-                            layer.msg(data.msg,{icon:5});
-                        }
+            layui.use("layer", function () {
+                var layer = layui.layer;  //layer初始化
+                layer.confirm('确认删除',{btn:['确认','取消']},
+                    function () {
+                        $.post(url,{},function (data) {
+                            if(data.is_ok=='ok'){
+                                location.reload();//刷新页面
+                                layer.msg(data.msg,{icon:6});
+                            }else{
+                                layer.msg(data.msg,{icon:5});
+                            }
+                        });
                     });
-                });
+            });
         });
     });
+
 </script>
